# sim_ws

src/robots_description/: CMakeLists.txt  package.xml
src/robots_description/launch/: multi-robot.launch  robot.launch
src/robots_description/model/chassis/yujin/: yujin-Kobuki_standalone.urdf.xacro
src/robots_description/model/chassis/yujin/urdf/: yujin-Kobuki.urdf.xacro  yujin-Kobuki_gazebo.urdf.xacro
src/robots_description/model/robots/turtlebot/: turtlebot_standalone.urdf.xacro
src/robots_description/model/robots/turtlebot/stacks/: hexagons.urdf.xacro
src/robots_description/model/sensors/microsoft/: microsoft-Kinect_standalone.urdf.xacro
src/robots_description/model/sensors/microsoft/urdf/: kinect.urdf.xacro
src/robots_description/model/sensors/microsoft/urdf/common/: common_properties.urdf.xacro
src/robots_description/model/sensors/velodyne/: velodyne-HDL32E_standalone.urdf.xacro  velodyne-VLP16_standalone.urdf.xacro
src/robots_description/model/sensors/velodyne/urdf/: velodyne-HDL32E.urdf.xacro  velodyne-VLP16.urdf.xacro
